:adhesive_bandage: Fix gap between home external links component

--- a/src/sass/home-links.scss
+++ b/src/sass/home-links.scss
@@ -5,7 +5,7 @@
 
     div{
         div{
-            gap: 20px;
+            gap: 30px;
             overflow-x: scroll;
 
             @media (min-width: 1024px) {
